GNOME Bugzilla – Bug 745487
Missing colors caused by some evolution calendar sources
Last modified: 2017-04-17 18:20:40 UTC
Created attachment 298357 [details] [review] app: Fix missing colors caused by some evolution calendar sources I have some evolution calendar sources with colors that are represented as long hexadecimal string, such as "#fcfcafaf3e3e". These are used to generate CSS from but are not valid CSS colors, which results in errors such as this: ** (gnome-calendar:27761): WARNING **: Error creating custom stylesheet. <data>:5:40Junk at end of value I'm attaching a patch that fixes this. Feel free to push it if you think it is correct since I've not applied for a git account yet.
I'm not sure about the patch. I'll sit on it a few days to see if I can come up with some parsing of some kind.
Just made a fix. Pushed as c7563da. I'm still not happy with it. We should handle calendars colors better. I'll leave the bug open because of it.
Comment on attachment 298357 [details] [review] app: Fix missing colors caused by some evolution calendar sources Code has been submitted to fix this partially.
This bug does not seem to affect the color parsing code anymore. Thanks for the fix, Erick.