app: handle calendars colours better

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=745487